--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
   "PREFIX": "/",
-  "PRUNING": false,
+  "PRUNING": true,
   "LOCALE": "en",
-  "STAY_TIME": 30,
+  "STAY_TIME": 9999999,
   "DEFAULT_VOLUME": 100
 }
