--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "evobot",
+  "name": "AC-Music",
   "version": "0.10.0",
   "description": "Discord music bot built with discord.js",
   "main": "index.js",
-  "author": "Erit Islami <eritislami@gmail.com>",
+  "author": "",
   "private": true,
-  "homepage": "https://github.com/eritislami/evobot",
+  "homepage": "",
   "repository": "github:eritislami/evobot",
   "bugs": "https://github.com/eritislami/evobot/issues",
   "engines": {
