--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "YOUTUBE_API_KEY": "AIzaSyCcBfMzSukWyseTfa6QesOpniFChETDo60",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 100,
-  "PREFIX": "'",
+  "PREFIX": "-",
   "PRUNING": true,
   "LOCALE": "en",
   "STAY_TIME": 9999999,
